--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,20 @@
 # Ignored directories
+Downloads
+Trash
 .cache
 .config/Code
 .mozilla/
-Trash
 .local
 .vscode
 .pki
 .gnupg
+.electron*
+.config/configstore
+go
+.GoLand*
+.java*
+.ssh
+.rvm
 
 # Ignored files
 .bash_history
