--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -413,15 +413,14 @@ cursor:
 # Live config reload (changes require restart)
 live_config_reload: true
 
-# # Shell
-# #
-# # You can set shell.program to the path of your favorite shell, e.g. /bin/fish.
-# # Entries in shell.args are passed unmodified as arguments to the shell.
-# shell:
-#   program: /usr/local/homebrew/bin/fish
-#   args:
-#     - --command=tmux
-
+# Shell
+#
+# You can set shell.program to the path of your favorite shell, e.g. /bin/fish.
+# Entries in shell.args are passed unmodified as arguments to the shell.
+shell:
+  program: /bin/bash
+  args:
+    - --login
 debug:
   # Should display the render timer
   render_timer: false
