function key controls for sound and screen brightness

--- a/.config/i3/config
+++ b/.config/i3/config
@@ -30,20 +30,23 @@ exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 # and nm-applet is a desktop environment-independent system tray GUI for it.
 exec --no-startup-id nm-applet
 
-# Screen brightness controls
-exec --no-startup-id gmux_backlight 204 & # Startup brightness
-bindsym XF86MonBrightnessUp exec --no-startup-id gmux_backlight +51 &  # increase screen brightness
-bindsym XF86MonBrightnessDown exec --no-startup-id gmux_backlight -51 & # decrease screen brightness
-bindsym $mod+XF86MonBrightnessUp exec --no-startup-id gmux_backlight 1023 & # set to max
-bindsym $mod+XF86MonBrightnessDown exec --no-startup-id gmux_backlight 204 & # set to comfort
+##############################
+# Screen brightness controls #
+##############################
 
+# Brightness -/+
+bindsym XF86MonBrightnessUp exec --no-startup-id xbacklight +10
+bindsym XF86MonBrightnessDown exec --no-startup-id xbacklight -10
 
-# Use pactl to adjust volume in PulseAudio.
-set $refresh_i3status killall -SIGUSR1 i3status
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ +10% && $refresh_i3status
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume @DEFAULT_SINK@ -10% && $refresh_i3status
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute @DEFAULT_SINK@ toggle && $refresh_i3status
-bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
+##############################
+#       Sound controls       #
+##############################
+
+bindsym XF86AudioRaiseVolume exec --no-startup-id amixer set Master +10%
+bindsym XF86AudioLowerVolume exec --no-startup-id amixer set Master -10%
+
+bindsym XF86AudioMute exec --no-startup-id ~/.config/scripts/mute.sh
+# bindsym XF86AudioMicMute exec --no-startup-id pactl set-source-mute @DEFAULT_SOURCE@ toggle && $refresh_i3status
 
 # Use Mouse+$mod to drag floating windows to their wanted position
 floating_modifier $mod
