--- a/.alacritty.yml
+++ b/.alacritty.yml
@@ -172,7 +172,7 @@ draw_bold_text_with_bright_colors: false
 #
 # To completely disable the visual bell, set its duration to 0.
 #
-visual_bell:
+bell:
   animation: EaseOutExpo
   color: '0xffffff'
   duration: 0
