--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,7 +1,7 @@
 [bar/top]
 monitor = eDP1
 width = 100%
-height = 34
+height = 40
 
 background = #000000
 foreground = #ccffff
@@ -13,7 +13,7 @@ padding-top = 10
 padding-right = 5
 module-margin = 4
 
-font-0 = NotoSans-Regular:size=8;0
+font-0 = Lucida Grande:size=12;0
 font-1 = unifont:size=10;-3
 font-2 = FontAwesome:size=10;-2
 font-3 = NotoSans-Regular:size=8;-1
