--- a/.config/i3/config
+++ b/.config/i3/config
@@ -8,8 +8,10 @@
 # i3 config file (v4)
 #
 # Please see https://i3wm.org/docs/userguide.html for a complete reference!
-
+#
 set $mod Mod4
+
+bindsym Print --release exec "scrot -s /tmp/screenshot-$(date +%F_%T).png -e 'xclip -selection c -t image/png < $f'"
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
@@ -57,8 +59,9 @@ bindsym $mod+Return exec alacritty
 # kill focused window
 bindsym $mod+Shift+q kill
 
-# start dmenu (a program launcher)
-bindsym $mod+d exec rofi -show run
+# start rofi (a program launcher)
+bindsym $mod+space exec rofi -show run
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -104,8 +107,6 @@ bindsym $mod+e layout toggle split
 # toggle tiling / floating
 bindsym $mod+Shift+space floating toggle
 
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
 
 # focus the parent container
 bindsym $mod+a focus parent
@@ -201,60 +202,34 @@ mode "$mode_system" {
 
 bindsym $mod+r mode "resize"
 
-#colors
-#https://github.com/arcticicestudio/nord
-#Polar Night
-set $nord-grey1 #2e3440
-set $nord-grey2 #3b4252
-set $nord-grey3 #434c5e
-set $nord-grey4 #4c566a
+# set colors from .Xresources with fallback
+set_from_resource $fg           color7  #2AA198
+set_from_resource $bg           color0  #1F2D3A
+set_from_resource $shade        color8  #ffffff
+set_from_resource $light        color21 #ffffff
+set_from_resource $urgent       color1  #ffffff
+set_from_resource $highlight    color4  #ffffff
 
-#Snow Storm
-set $nord-white1 #d8dee9
-set $nord-white2 #e5e9f0
-set $nord-white3 #eceff4
+# set window colors     border  backgr. text    indicator   child_border
+client.focused          $fg     $bg     $fg     $light      $highlight
+client.focused_inactive $bg     $bg     $shade  $light      $bg
+client.unfocused        $bg     $bg     $shade  $light      $bg
+client.urgent           $urgent $urgent $shade  $light      $urgent
+client.placeholder      $bg     $bg     $shade  $light      $bg
+client.background       $bg
 
-#Frost
-set $nord-frost1 #8fbcbb
-set $nord-frost2 #88c0d0
-set $nord-frost3 #81a1c1
-set $nord-frost4 #5e81ac
+# set window borders
+for_window [class="^.*"] border pixel 0
+smart_borders on
 
-#Aurora
-set $nord-red #bf616a
-set $nord-orange #d08770
-set $nord-yellow #ebcb8b
-set $nord-green #a3be8c
-set $nord-pink #b48ead
-
-#class                      border        backgr       text	    indicator   childborder
-client.focused		    $nord-grey1  $nord-grey1  $nord-white1  $nord-white1  $nord-white1
-client.focused_inactive	    $nord-grey1  $nord-grey1  $nord-white1  $nord-grey4   $nord-grey4
-client.unfocused	    $nord-grey1  $nord-grey1  $nord-white1  $nord-grey4   $nord-grey4
-client.urgent		    $nord-grey1  $nord-grey1  $nord-white1  $nord-pink    $nord-pink
-client.placeholder	    $nord-grey1  $nord-grey1  $nord-white1  $nord-pink    $nord-pink
-client.background	    $nord-grey1
 
 #############################
 ### settings for i3-gaps: ###
 #############################
 
-gaps inner 10
-gaps outer 0
-gaps top 0
-gaps bottom 0
-for_window [class="^.*"] border pixel 4
+gaps inner 8
+gaps outer 4
 
-# Start i3bar to display a workspace bar (plus the system information i3status
-# finds out, if available)
-bar {
-        status_command i3status
-        strip_workspace_numbers yes
-        font pango:Lucida Grande 10
-}
-
-exec feh --bg-scale ~/wallpapers/wallpaper.png
+exec --no-startup-id ~/.config/polybar/launch.sh
+exec --no-startup-id feh --bg-scale ~/wallpapers/wallpaper.png
 exec --no-startup-id picom
-exec --no-startup-id ~/.i3/polybar.sh &
-exec polybar top &
-exec redshift &
