--- a/.config/polybar/config
+++ b/.config/polybar/config
@@ -1,162 +1,130 @@
-[bar/top]
-monitor = eDP1
-width = 100%
-height = 40
 
+[bar/topbar]
+height = 36
+fixed-center = true
+radius = 15
+line-size = 2
+padding = 2
 background = #000000
-foreground = #ccffff
 
-line-size = 16
+border-color = #00000000
+border-left-size = 0.5%
+border-right-size = 0.5%
+border-top-size = 2
+border-bottom-size = 0
 
-spacing = 2
-padding-top = 10
-padding-right = 5
-module-margin = 4
+font-0 = "agave Nerd Font Mono:style=Regular:size=14;4"
+font-1 = "Helvetica:size=9;2"
 
-font-0 = Lucida Grande:size=12;0
-font-1 = unifont:size=10;-3
-font-2 = FontAwesome:size=10;-2
-font-3 = NotoSans-Regular:size=8;-1
-font-4 = MaterialIcons:size=8;-1
-font-5 = Termsynu:size=8:antialias=false;0
-font-6 = "Font Awesome 5 Free:style=Regular:pixelsize=10;1"
-font-7 = "Font Awesome 5 Free:style=Solid:pixelsize=10;1"
-font-8 = "Font Awesome 5 Brands:pixelsize=10;1"
+modules-left = i3 
+modules-right = wireless-network time battery
 
-modules-left = powermenu mpd
-modules-right = volume backlight wireless-network wired-network battery date
+[module/i3wm]
+type = internal/i3
+format = <label-mode>
+index-sort = true
+wrapping-scroll = false
 
-[module/battery]
-type = internal/battery
-full-at = 100
+ws-icon-0 = 1;%{F#ff873d}%{F-}
+ws-icon-1 = 2;%{O-10}%{F#ff6363}%{F-}
+ws-icon-2 = 3;%{O-10}%{F#aa42ff}%{F-}
+ws-icon-3 = 4;%{O-10}%{F#faff63}%{F-}
+ws-icon-4 = 5;%{O-10}%{F#ffe563}%{F-}
+ws-icon-5 = 6;%{O-10}%{F#70ff63}阮%{F-}
+ws-icon-6 = 7;%{O-10}%{F#9c63ff}ﭮ%{F-}
+ws-icon-7 = 8;%{O-10}%{F#63ffa4}%{F-}
 
-label-charging = %percentage%%  %time%
-format-charging = <animation-charging> <label-charging>
-format-discharging = <ramp-capacity> <label-discharging>
-format-full = <ramp-capacity> <label-full>
+label-focused = %{u#6bff63}%{+u}%icon%%{-u}
+label-focused-padding = 1
 
-ramp-capacity-0 = 
-ramp-capacity-0-foreground = #f53c3c
-ramp-capacity-1 = 
-ramp-capacity-1-foreground = #ffa900
-ramp-capacity-2 = 
-ramp-capacity-3 = 
-ramp-capacity-4 = 
+label-occupied = %{u#ff6363}%{+u}%icon%%{-u}
+label-occupied-padding = 1
 
-bar-capacity-width = 10
-bar-capacity-format = %{+u}%{+o}%fill%%empty%%{-u}%{-o}
-bar-capacity-fill = █
-bar-capacity-fill-foreground = #ddffffff
-bar-capacity-fill-font = 3
-bar-capacity-empty = █
-bar-capacity-empty-font = 3
-bar-capacity-empty-foreground = #44ffffff
+label-empty = %icon%
+label-empty-padding = 1
 
-animation-charging-0 = 
-animation-charging-1 = 
-animation-charging-2 = 
-animation-charging-3 = 
-animation-charging-4 = 
-animation-charging-framerate = 750
+[module/cpu]
+type = internal/cpu
+interval = 0.5
+format-font = 1
+format = %{O8}<label>%{O20}
+format-foreground = #fff
+label-font = 2
+label = %percentage%%{O5}
 
-[module/date]
-type = internal/date
-date =    %%{F#99}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
-date-alt = %%{F#fff}%A, %d %B %Y  %%{F#fff}%H:%M%%{F#666}:%%{F#fba922}%S%%{F-}
-
-[module/memory]
-type = internal/memory
-format = <label> <bar-used>
-label = RAM
-
-bar-used-width = 30
-bar-used-foreground-0 = #aaff77
-bar-used-foreground-1 = #aaff77
-bar-used-foreground-2 = #fba922
-bar-used-foreground-3 = #ff5555
-bar-used-indicator = |
-bar-used-indicator-font = 6
-bar-used-indicator-foreground = #ff
-bar-used-fill = ─
-bar-used-fill-font = 6
-bar-used-empty = ─
-bar-used-empty-font = 6
-bar-used-empty-foreground = #444444
+[module/pulseaudio]
+type = internal/pulseaudio
+sink = alsa_output.pci-0000_00_14.2.analog-stereo
+format-volume = ﰝ%{O10}<label-volume>%{O20}
+label-volume-font = 2
+format-volume-foreground = #ff9d52
+format-muted = %{O10}遼%{O20}
+label-muted-font = 2
+format-muted-foreground = #ff9d52
+use-ui-max = true
+interval = 5
 
 [module/wireless-network]
 type = internal/network
-interface = net1
-interval = 3.0
-ping-interval = 10
+interface = wlp2s0
+interval = 3
+format-connected = <label-connected>%{O20}
+label-connected = %downspeed:9%
+label-connected-font = 2
+format-connected-foreground = #ffe252
 
-format-connected = <ramp-signal> <label-connected>
-label-connected = %essid%
-label-disconnected =    not connected
-label-disconnected-foreground = #66
-
-ramp-signal-0 = 
-ramp-signal-1 = 
-ramp-signal-2 = 
-ramp-signal-3 = 
-ramp-signal-4 = 
-
-animation-packetloss-0 = 
-animation-packetloss-0-foreground = #ffa64c
-animation-packetloss-1 = 
-animation-packetloss-1-foreground = ${bar/top.foreground}
-animation-packetloss-framerate = 500
-
-
-[module/volume]
-format-padding = 5
-module-margin = 0.5
-
-type = internal/alsa
-speaker-mixer = Speaker
-headphone-mixer = Headphone
-headphone-id = 9
-
-format-volume = <ramp-volume> <label-volume>
-label-muted =   muted
-label-muted-foreground = #66
-
-ramp-volume-0 = 
-ramp-volume-1 = 
-ramp-volume-2 = 
-ramp-volume-3 = 
+[module/time]
+type = internal/date
+interval = 1.0
+time = %I:%M %P
+label = %time%
+label-font = 2
+format = %{O10}<label>%{O20}
+format-foreground = #ffe252
 
 [module/powermenu]
 type = custom/menu
+format-foreground = #83ff52
+menu-0-0 = %{F#ff7575}%{F-}
+menu-0-0-exec = systemctl poweroff
+menu-0-1 = %{F#ffbc75}%{F-}
+menu-0-1-exec = bspc quit
+menu-0-2 = %{F#fff945}勒%{F-}
+menu-0-2-exec = systemctl reboot
+menu-0-3 = %{F#00bcf5}鈴%{F-}%{O15}
+menu-0-3-exec = systemctl hibernate
+label-open = %{O10}
+label-close = %{F#ff8c8c}%{F-}
+label-separator = %{O5}%{O5}
 
+[module/battery]
+label-charging-font = 2
+label-discharging-font = 2
+animation-charging-font = 2
+format-charging-font = 2
 
-label-open = 
-label-close = 
+format-discharging-foreground = #ffe252
 
-menu-0-0 = Terminate WM
-menu-0-0-foreground = #fba922
-menu-0-0-exec = bspc quit -1
-menu-0-1 = Reboot
-menu-0-1-foreground = #fba922
-menu-0-1-exec = menu_open-1
-menu-0-2 = Power off
-menu-0-2-foreground = #fba922
-menu-0-2-exec = menu_open-2
+type = internal/battery
+time-format = %H:%M
+battery = BAT0
+format-charging = <animation-charging> <label-charging>
+label-charging = %percentage%%
+format-discharging = <ramp-capacity> <label-discharging>
+label-discharging = %percentage%% (%time%)
+format-full = <label-full>
 
-menu-1-0 = Cancel
-menu-1-0-foreground = #fba922
-menu-1-0-exec = menu_open-0
-menu-1-1 = Reboot
-menu-1-1-foreground = #fba922
-menu-1-1-exec = sudo reboot
+format-full-prefix = ""
+ramp-capacity-0 = 
+ramp-capacity-1 = 
+ramp-capacity-2 = 
+ramp-capacity-3 = 
+ramp-capacity-4 = 
 
-menu-2-0 = Power off
-menu-2-0-foreground = #fba922
-menu-2-0-exec = sudo poweroff
-menu-2-1 = Cancel
-menu-2-1-foreground = #fba922
-menu-2-1-exec = menu_open-0
+animation-charging-0 = 
+animation-charging-1 = 
+animation-charging-2 = 
+animation-charging-3 = 
+animation-charging-4 = 
 
-[module/clock]
-type = internal/date
-interval = 2
-date = %%{F#999}%Y-%m-%d%%{F-}  %%{F#fff}%H:%M%%{F-}
+animation-charging-framerate = 750
